Implement a the uArm protocol
Implement a small function which takes the arm joints parameters
and puts them in a byte array ready to be sent over the port.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(uArmDraw)
 find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   std_msgs
+  serial
 )
 
 ## System dependencies are found with CMake's conventions
