Change the package name according to ROS
Change the name of the package in order to follow the ROS
convention of using only snake case for package names.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(uArmDraw)
+project(uarm_draw)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -108,14 +108,14 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-add_executable(uArmDraw src/uArmDraw.cpp)
+add_executable(uarm_draw src/uarm_draw.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 # add_dependencies(uArmDraw_node uArmDraw_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(uArmDraw
+target_link_libraries(uarm_draw
   ${catkin_LIBRARIES}
   ${OpenCV_LIBS}
   fltk
