--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>uArmDraw</name>
+  <name>uarm_draw</name>
   <version>0.0.0</version>
   <description>The uArmDraw package</description>
 
